5.3/Greeter/manifests/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  namespace: exercises
  labels:
    app: greeter
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: greeter:5.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
