5.3/Greeter/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
  labels:
    app: greeter
spec:
  selector:
    app: greeter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  namespace: exercises
  labels:
    app: greeter
    version: v1
spec:
  selector:
    app: greeter
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
  namespace: exercises
  labels:
    app: greeter
    version: v2
spec:
  selector:
    app: greeter
    version: v2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
