5.3/Greeter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
  namespace: exercises
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: greeter-svc
      port: 8080
  rules:
    - backendRefs:
        - name: greeter-svc-1
          port: 8080
          weight: 75
        - name: greeter-svc-2
          port: 8080
          weight: 25
